* 2017-02-05 (latest)
  - Installs YunoHost 2.5 Chelsea Manning (with native Let's Encrypt integration)
  - Fixes issues with physical network interfaces sometimes not automatically brought up
  - [LIME2] Fixes instable reachability issues (uboot patch)
  - [LIME2] Fixes slow network issues (uboot patch)
  - [HyperCube] Removes deadlocks with YunoHost processes
  - [EncryptedFS] Greatly improves the fiability of the web interface

* 2016-10-23
  - Updates openvpn in order to avoid a bug requiring to reboot after the upgrade
  - [HyperCube] Does not configure VPN Client before the installation is completed
  - [HyperCube] Fails if DoctorCube cannot be installed

* 2016-08-16
  - [EncryptedFS] Fixes a security issue on the web interface (thx @alpheb)
  - [EncryptedFS] Fixes some minor bugs on the web interface
  - [HyperCube] Fixes bugs with special chars in passwords not hidden in logs
  - [HyperCube] Installs DoctorCube by default

* 2016-05-21
  - [HyperCube] Fixes a bug with special chars in first/last name during installation
  - [HyperCube] Improves error management system during installation

* 2016-05-16
  - Installs YunoHost 2.4
  - Uses Debian Stable kernel (3.16)
  - Supports HyperCube Service