@@ -309,7 +309,11 @@ function findLocalIp() {
 </header>
 
 <main id="main">
-  <div id="explanations">This page should be open <strong>directly on your laptop</strong>, with your web browser.<br />You have to be <strong>on the same network</strong> than your currently running Internet Cube.</div>
+  <div id="explanations">
+    This page should be open <strong>directly on your laptop</strong>, with your web browser.<br />
+    You have to be <strong>on the same network</strong> than your currently running Internet Cube.<br />
+    (If your Internet Cube is encrypted, think to type your passphrase.)
+  </div>
   <div id="scans"></div>
   <div id="subprogress">
     <div id="progress" style="width: 1%">&nbsp;</div>
